--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@stackbit/cms-sanity": "^0.2.66",
+    "@stackbit/types": "^2.0.7",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
